# 3DPose

./: Arcuo_Benchmark  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Detector  FindGLEW.cmake  Main  Makefile  README.md  Template_Generator  arucoBenchmark.cpp  cmake_install.cmake  detector.cpp  main.cpp
ext/ntcore/: ntcore_test.h
ext/wpi/: pb.h
include/: Aruco.h  PoseDetection.h  Stereo.h
models/: coral.ply  coral.yml
src/: Aruco.cpp
